<resources>
    <string name="news_title">MSDK 5.4.0</string>
    <string name="news_description">"- Added supported aircraft: Matrice 350 RTK.
- Matrice 300 RTK added support for DJI RC Plus remote controller.

More refer to the release notes." </string>
    <string name="news_date">2023–5–18</string>
    <string name="sdk_forum_url">https://sdk-forum.dji.net/hc/en-us/community/topics</string>
    <string name="release_node_url">https://developer.dji.com/doc/mobile-sdk-tutorial/en/</string>
    <string name="tech_support_url">https://sdk-forum.dji.net/hc/en-us/requests/new</string>
    <string name="news_dialog_content_tips">MSDK has a new version update, click for details.</string>
    <string name="news_dialog_btn_left">Details</string>
    <string name="news_dialog_btn_right">Exit</string>
    <string name="release_note_tile_latest">Latest version of MSDK: %s</string>
    <string name="release_note_tile_current">Current version of MSDK: %s</string>
    <string name="release_note_loading">loading…</string>
    <string name="app_name_all">MSDK ALL</string>
    <string name="app_name_aircraft">DroneController</string>
    <string name="app_name_handheld">MSDK Handheld</string>
    <string name="item_key_value_title">Key/Value</string>
    <string name="item_key_value_description">Demonstrate how to use the Key/Value function</string>
    <string name="item_multi_video_decoding_title">Multi-Video Decoding (VideoStreamManager - Deprecated)</string>
    <string name="item_multi_video_decoding_description">Demonstrate how to use the Multi-Video Decoding function</string>
    <string name="item_multi_camera_stream_title">Multi-Video Decoding (CameraStreamManager - New)</string>
    <string name="item_multi_camera_stream_description">Demonstrate how to use the Multi-Video Decoding function</string>
    <string name="item_waypoint_title">Waypoint</string>
    <string name="item_waypoint_description">Demonstrate how to use the waypoint flight function</string>
    <string name="item_virtual_stick_title">Virtual Stick</string>
    <string name="item_virtual_description">Demonstrate how to use the virtual stick function</string>
    <string name="item_handheld_title">Handheld</string>
    <string name="item_handheld_description">Demonstrate how to use the handheld function</string>
    <string name="item_diagnostic_title">Diagnostic</string>
    <string name="item_diagnostic_description">Demonstrate how to use the diagnostic function</string>
    <string name="item_live_stream_title">Live Stream</string>
    <string name="item_live_stream_description">Demonstrate how to use the live stream function</string>
    <string name="item_flight_record_title">Flight Log</string>
    <string name="item_flight_record_description">Demonstrate how to use the Flight Log function</string>
    <string name="item_rtk_title">Network RTK</string>
    <string name="item_rtk_description">Demonstrate how to use the RTK function</string>
    <string name="item_megaphone_title">Megaphone</string>
    <string name="item_megaphone_description">Demonstrate how to use the Megaphone function</string>
    <string name="item_lte_title">LTE</string>
    <string name="item_lte_description">Demonstrate how to use the LTE function</string>
    <string name="item_fly_safe_title">Fly Safe</string>
    <string name="item_fly_safe_description">Demonstrate how to use the Fly Safe function</string>
    <string name="item_data_protection_title">Data Protection</string>
    <string name="item_data_protection_description">Demonstrate how to use the Data Protection function</string>
    <string name="btn_init_msdk">Init MSDK</string>
    <string name="btn_unInit_msdk">UnInit MSDK</string>
    <string name="btn_register_app">Register app</string>
    <string name="btn_enable_ldm">Enable LDM</string>
    <string name="btn_disable_ldm">Disable LDM</string>
    <string name="tip_ldn_choice_title" >Please select the LDM exempt module</string>
    <string name="tip_ldn_choice_confirm" >Confirm</string>
    <string name="tip_ldn_choice_cancel" >Cancel</string>
    <string name="btn_enable_virtual_stick">Enable Virtual Stick</string>
    <string name="btn_disable_virtual_stick">Disable Virtual Stick</string>
    <string name="btn_set_virtual_stick_speed_level">Set Speed Level</string>
    <string name="btn_use_rc_stick_value">Start/Stop Use Rc Stick Value</string>
    <string name="set_virtual_stick_advanced_param">Set Virtual Stick Advanced Param</string>
    <string name="send_virtual_stick_advanced_param">Send Virtual Stick Advanced Param</string>
    <string name="enable_virtual_stick_advanced_mode">Enable Virtual Stick Advanced Mode</string>
    <string name="disable_virtual_stick_advanced_mode">Disable Virtual Stick Advanced Mode</string>
    <string name="btn_take_off">Take Off</string>
    <string name="btn_landing">Landing</string>
    <string name="btn_start_channel">Start Channel</string>
    <string name="btn_close_channel">Close Channel</string>
    <string name="btn_yuv_screen_shot">YUV Screen Shot</string>
    <string name="btn_resume_video">Resume Video</string>
    <string name="btn_start_socket">Start Socket</string>
    <string name="btn_close_socket">Close Socket</string>
    <string name="btn_start_broadcast">Start Broadcast</string>
    <string name="btn_stop_broadcast">Stop Broadcast</string>
    <string name="btn_switch_source">SwitchSource</string>
    <string name="btn_get_flight_record_path">Get Flight Record Path</string>
    <string name="btn_get_fly_compressed_path">Get Fly Compressed Log Path</string>
    <string name="start_pairing">Start Pairing</string>
    <string name="stop_pairing">Stop Pairing</string>
    <string name="n_a">N/A</string>
    <string name="video_stream_manager">Video Stream Manager</string>
    <string name="reset_all_video_channel">Reset All Video Channel</string>
    <string name="get_all_video_channel">Get All Video Channel</string>
    <string name="select_stream_source">Select Stream Source</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="popup_picker_finish">Finish</string>
    <string name="popup_picker_trigger">Trigger</string>
    <string name="no_product">No product connected</string>
    <string name="wsbridge_ip">WSBridge IP</string>
    <string name="sdk_version">Version: %1$s</string>
    <string name="product_name">Product Name: %1$s</string>
    <string name="is_sdk_debug">Is SDK Debug: %1$s</string>
    <string name="registration_status">Registration Status: %1$s</string>
    <string name="package_product_category">Package Category: %1$s</string>
    <string name="remote_controller">Remote Controller Only</string>
    <string name="unregistered">Unregistered</string>
    <string name="registered">Registered</string>
    <string name="logs">Logs</string>
    <string name="news">Notification</string>
    <string name="showcase">Showcase &amp; Tools</string>
    <string name="widget_list">Widget List</string>
    <string name="testing_tools">Testing Tools</string>
    <string name="default_layout">Default Layout</string>
    <string name="sdk_forum">SDK Forum</string>
    <string name="release_nodes">Release Nodes</string>
    <string name="tech_support">Tech Support</string>
    <string name="switch_product_improvement">Product Improvement Project</string>
    <string name="switch_msdk_log">MSDK Log Enable</string>
    <string name="switch_product_improvement_on">Agree</string>
    <string name="switch_product_improvement_off">Disagree</string>
    <string name="clear_msdk_log">Clear MSDK Log</string>
    <string name="btn_start_audio_mode">Audio Record</string>
    <string name="btn_start_tts_mode">TTS</string>
    <string name="btn_file_list">File List</string>
    <string name="upload_status">Upload Status</string>
    <string name="record_btn_title">Click To Start Record</string>
    <string name="btn_press_to_start_record">Tap to Talk</string>
    <string name="btn_press_to_stop_record">Stop</string>
    <string name="btn_realtime_title">Click the button below to start calling in real time</string>
    <string name="quick_play">Quick Play</string>
    <string name="start_agc">Turn on AGC algorithm</string>
    <string name="btn_send_tts_data">Send TTS</string>
    <string name="title_megaphone">Megaphone</string>
    <string name="megaphone_state">Megaphone State</string>
    <string name="megaphone_control">Megaphone Control</string>
    <string name="megaphone_index">Megaphone Index</string>
    <string name="rt_transmission_status">Real-time Transmission Status:</string>
    <string name="btn_tts">TTS</string>
    <string name="btn_rt_voice">Real-time Voice</string>
    <string name="btn_record_voice">Record Voice</string>
    <string name="btn_audio_list">Audio List</string>
    <string name="cur_volume_value">current volume:</string>
    <string name="item_simulator_title">Simulator</string>
    <string name="item_simulator_description">Demonstrate how to use the Simulator function</string>
    <string name="btn_enable_simulator">Enable Simulator</string>
    <string name="btn_disable_simulator">Disable Simulator</string>
    <string name="btn_update_areacode">Update AreaCode</string>
    <string name="btn_quick_simulator_area">Quick Simulator Area</string>
    <string name="item_upgrade_title">Upgrade</string>
    <string name="item_upgrade_description">Demonstrate how to use the Upgrade function</string>
    <string name="btn_start_custom_network_rtk_service">Start Custom NetWork RTK</string>
    <string name="btn_stop_custom_network_rtk_service">Stop Custom NetWork RTK</string>
    <string name="btn_set_custom_network_rtk_settings">Set custom network RTK account information</string>
    <string name="btn_start_qx_network_rtk_service">Start QX NetWork RTK</string>
    <string name="btn_stop_qx_network_rtk_service">Stop QX NetWork RTK</string>
    <string name="btn_set_qx_network_rtk_coordinate_system">Set QX NetWork RTK Coordinate System</string>
    <string name="btn_start_cmcc_rtk_service">Start CMCC RTK</string>
    <string name="btn_stop_cmcc_rtk_service">Stop CMCC RTK</string>
    <string name="item_psdk_title">PSDK Test</string>
    <string name="item_psdk_description">Demonstrate how to use PSDK related functions</string>
    <string name="gimbal_control_title">Gimbal Control</string>
    <string name="gimbal_angle_control">Angle Control</string>
    <string name="gimbal_angle_mode">Angle Mode</string>
    <string name="gimbal_angle_mode_absolute">Absolute</string>
    <string name="gimbal_angle_mode_relative">Relative</string>
    <string name="gimbal_angle_input_valid">Angle input is within range</string>
    <string name="gimbal_speed_control">Speed Control</string>
    <string name="gimbal_other">Other Operations</string>
    <string name="gimbal_current_attitude">Current Attitude</string>
    <string name="gimbal_mode_label">Mode</string>
    <string name="gimbal_attitude_range">Attitude Range</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="yaw">Yaw</string>
    <string name="pitch_speed">Pitch Speed</string>
    <string name="roll_speed">Roll Speed</string>
    <string name="yaw_speed">Yaw Speed</string>
    <string name="pitch_label">Pitch</string>
    <string name="roll_label">Roll</string>
    <string name="yaw_label">Yaw</string>
    <string name="btn_rotate_by_angle">Rotate by Angle</string>
    <string name="btn_rotate_by_speed">Rotate by Speed</string>
    <string name="btn_stop_rotate">Stop Rotate</string>
    <string name="btn_set_mode">Set Mode</string>
    <string name="btn_reset_gimbal">Reset Gimbal</string>
    <string name="btn_calibrate_gimbal">Calibrate Gimbal</string>
    <string name="item_udp_title">UDP Control</string>
    <string name="udp_server_not_started">Not started</string>
    <string name="udp_btn_start">Start</string>
</resources>