<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_udp_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_udp_title"
        android:textSize="@dimen/uxsdk_20_dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="UDP Control" />

    <TextView
        android:id="@+id/tv_server_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/uxsdk_10_dp"
        android:gravity="center"
        android:text="@string/udp_server_not_started"
        android:textSize="@dimen/uxsdk_16_dp"
        app:layout_constraintTop_toBottomOf="@id/tv_udp_title"
        tools:text="未启动" />

    <Button
        android:id="@+id/btn_toggle_server"
        style="@style/main_fragment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/udp_btn_start"
        app:layout_constraintTop_toBottomOf="@id/tv_server_status"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/message_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_toggle_server"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
